# genomic-variant-classifier

./: .gitattributes  .gitignore  .markdownlint.json  Dockerfile  LICENSE  METHODS.md  NOTEBOOK_CELL_FIXES.py  PHASE_1_ASSESSMENT.md  PHASE_2_FEATURES.md  README.md  ROADMAP.md  ROADMAP_PSYCH_GWAS_ENTRY.md  docker-compose.yml  genomic-variant-classifier.code-workspace  pyproject.toml  requirements-api.txt  requirements-dev.in  requirements-production.txt  requirements.in  requirements.txt  setup.py  validate_docs.py
agent_layer/: message_bus.py  orchestrator.py  run_agents.py  shared_state.json  shared_state.py
configs/: config.yaml  default.yaml
deploy/: prometheus.yml
docs/: CHANGELOG.md  ENVIRONMENT.md  HANDOFF_run9_launch.md  PATCHES_AND_INTEGRATION.md  PHASE_3_ROADMAP.md  PLAYBOOK_STALE_NOTICE.md  ROADMAP.md  RUN9_OPERATIONS_PLAYBOOK.md  RUN9_SCIENTIFIC_DESIGN.md
models/: phase2_pipeline.manifest.json  phase4_pipeline.manifest.json  phase4_pipeline_calibrated.manifest.json
notebooks/: genomic_variant_classifier__setup.ipynb  genomic_variant_classifier_stage2.ipynb  model_comparison.ipynb
scripts/: apply_gnn_trace_patch.py  apply_patch_6b.py  build_dbsnp_index.py  build_gnomad_parquet.py  build_lovd_index.py  c3_inventory.py  c3_sweep.py  calibrate_thresholds.py  calibration_analysis.py  check_variant_id.py  complete_patch_6b.py  conformal_prediction.py  diagnose_dups.py  export_model.py  gcp_run6_startup.sh  gcp_run7_startup.sh  launch_run10_vm.sh  launch_run10a_vm.sh  launch_run9_vm.sh  migrate_pickles.py  parse_lovd_all.py  patch_add_manifests.py  (+21 more)
(+175 files in other folders)
